[tool.poetry]
name = "backupgram"
version = "0.1.0"
description = ""
authors = ["Alejandro Pereira <alexpereiracarballo007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Pyrogram = "^2.0.99"
TgCrypto = "^1.2.5"
pymongo = "^4.3.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
